[package]
name = "os"
version = "0.1.0"
authors = ["RainaX <xiaofanx@andrew.cmu.edu>"]
edition = "2018"


[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
spin = "0.7.0"
xmas-elf = "0.7.0"
